Updated Polish scripts translation

--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -6,10 +6,10 @@
 # Wiktor Wandachowicz <siryes@gmail.com>, 2008
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.19\n"
+"Project-Id-Version: dpkg 1.14.24\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-12-29 05:28+0100\n"
-"PO-Revision-Date: 2008-06-10 20:52+0100\n"
+"PO-Revision-Date: 2009-02-04 10:08+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -158,7 +158,7 @@ msgstr ""
 "Copyright (C) 2007 Frank Lichtenheld"
 
 #: scripts/dpkg-buildpackage.pl:36
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "\n"
 "Usage: %s [<options> ...]\n"
@@ -212,14 +212,14 @@ msgstr ""
 "\n"
 "Opcje:\n"
 "  -r<polecenie-uzysk-praw-administratora>\n"
-"              polecenie uzyskiwania praw admin. (domyślnie fakeroot).\n"
-"  -R<rules>   plik rules do uruchomienia (domyślnie debian/rules).\n"
+"                 polecenie uzyskiwania praw admin. (domyślnie fakeroot).\n"
+"  -R<rules>      plik rules do uruchomienia (domyślnie debian/rules).\n"
 "  -p<polecenie-podpisywania>\n"
-"  -j[<liczba>]   określa liczba zadań wykonywanych jednocześnie } "
-"przekazywane do debian/rules\n"
 "  -d             nie sprawdza zależności i konfliktów czasu budowania.\n"
 "  -D             sprawdza zależności i konflikty czasu budowania.\n"
-"  -k<id_klucza>  klucz używany do podpisywania.\n"
+"  -j[<liczba>]   liczba zadań wykonywanych jednocześnie } przekazywane do\n"
+"                                                        } debian/rules\n"
+"  -k<id-klucza>  klucz używany do podpisywania.\n"
 "  -sgpg          polecenie-podpisywania jest wywoływane jak GPG.\n"
 "  -spgp          polecenie-podpisywania jest wywoływane jak PGP.\n"
 "  -us            niepodpisywanie źródeł.\n"
@@ -227,28 +227,28 @@ msgstr ""
 "  -a<arch>       architektura Debiana, dla której budujemy (implikuje -d).\n"
 "  -b             tylko binarne, bez źródeł.           } przekazywane\n"
 "  -B             tylko binarne, bez niezal. od arch.  } również do\n"
-"  -A             tylko binarne, tylko niezal. od arch.}\n"
-"  -S             tylko źródła, bez binarów.           } dpkg-genchanges\n"
+"  -A             tylko binarne, tylko niezal. od arch.} dpkg-genchanges\n"
+"  -S             tylko źródła, bez binarów.         }\n"
 "  -t<system>     ustawia typ systemu GNU. } przekazywane do dpkg-"
 "architecture\n"
 "  -v<wersja>     zmiany od wersji <wersja>.             }\n"
-"  -m<opiek>      opiekunem pakietu jest <opiek>.        } \n"
+"  -m<opiek>      opiekunem pakietu jest <opiek>.        }\n"
 "  -e<opiek>      opiekunem wydania jest <opiek>.        } tylko\n"
 "  -C<plik-desc>  zmiany są opisane w <pliku-desc>.      } przekazywane do\n"
-"  -si (domyślnie źródła włączają oryg, jeśli rev 0 lub 1} dpkg-genchanges\n"
-"  -sa            źródła zawsze włączają oryg.    \t}\n"
+"  -si (domyślne) źródła włączają oryg, jeśli nowsze     } dpkg-genchanges\n"
+"  -sa            źródła zawsze włączają oryg.           }\n"
 "  -sd            wydanie składa się z tylko diff i .dsc.}\n"
 "  -sn            wymusza format natywnych źródeł Debiana. } tylko\n"
 "  -s[sAkurKUR]   patrz opis w dpkg-source                 } przekazywane do\n"
-"  -z<level>      poziom kompresji źródeł                  } dpkg-source\n"
+"  -z<poziom>     poziom kompresji źródeł                  } dpkg-source\n"
 "  -Z(gz|bz2|lzma) typ używanej kompresji źródeł           }\n"
 "  -nc            nie czyści drzewa źródeł (wymusza -b).\n"
 "  -tc            czyści drzewo źródeł po zakończeniu.\n"
 "  -ap            dodaje pauzę przez rozpoczęciem podpisywania.\n"
-"  -E             zmienia niektóre ostrzeżenia w błędy. } przekazywane do\n"
-"  -W             jeśli -E jest włączone, -W je wyłącza.} dpkg-source\n"
+"  -E             zmienia niektóre ostrzeżenia w błędy.  } przekazywane do\n"
+"  -W             jeśli -E jest włączone, -W je wyłącza. } dpkg-source\n"
 "  -i[<wyr-reg>]  ignorowanie różnic pasujących plików.     } tylko przek.\n"
-"  -I[<pattern>]  odfiltrowanie plików podczas budowania tar} do dpkg-source\n"
+"  -I[<wzorzec>]  odfiltrowanie plików podczas budowania tar} do dpkg-source\n"
 "  --admindir=<katalog>\n"
 "                 zmienia katalog administracyjny.\n"
 "  -h, --help     wyświetla ten komunikat pomocy.\n"
