--- a/debian/changelog
+++ b/debian/changelog
@@ -116,6 +116,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
 
+  [ Updated scripts translations ]
+  * Polish (Wiktor Wandachowicz). Closes: #514106
+
   [ Updated manpages translations ]
   * Polish (Wiktor Wandachowicz). Closes: #514106
 
