Updated Polish scripts translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 dpkg (1.14.26) UNRELEASED; urgency=low
 
+  [ Updated scripts translations ]
+  * Polish (Wiktor Wandachowicz). Closes: #514106
+
   [ Updated manpages translations ]
   * Polish (Wiktor Wandachowicz). Closes: #514106
 
