update-alternatives: improve --config behaviour
* scripts/update-alternatives.pl: Allow --config to continue when
the currently selected alternative doesn't match the only existing
one. Useful to be able to recover from a broken configuration.
Also offer the choice in --config mode to go back the automatic
mode. Add a new --skip-auto option to combine with --all and
easily review manual and broken alternatives.
* man/update-alternatives.8: Update the documentation accordingly.

Based on a patch by Osamu Aoki <osamu@debian.org>.

--- a/debian/changelog
+++ b/debian/changelog
@@ -112,6 +112,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add Ubuntu vendor object implementing lookup of launchpad bugs in
     changelogs and a safety-check for Maintainer fields of forked packages
     (launched during source build). Closes: #426752, #499924
+  * Improve behaviour of update-alternatives --config. Thanks to
+    Osamu Aoki <osamu@debian.org> for the initial patch.
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
