update-alternatives: avoid switching to manual mode broken alternatives
* scripts/update-alternatives.pl: Ensure that a broken link
in automatic mode doesn't lead to the alternative being set
on manual mode. Also displays by default (and not only
when --verbose is given) the message that indicates that
an alternative is switched to manual mode.

--- a/debian/changelog
+++ b/debian/changelog
@@ -114,6 +114,10 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     (launched during source build). Closes: #426752, #499924
   * Improve behaviour of update-alternatives --config. Thanks to
     Osamu Aoki <osamu@debian.org> for the initial patch.
+  * Fix update-alternatives to not switch to manual mode an alternative
+    with a broken symlink (instead let the current action fix it).
+    Also ensure that a message is displayed by default when such a switch is
+    made. Closes: #141325, #87677
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
