Remove unneeded cpio dependency from dpkg-dev
dpkg-source used to call cpio to handle tar archives, but not anymore
for a long time.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add initial C unit test suite for libdpkg.
   * Sanitize --status-fd output by replacing newlines with spaces.
     Closes: #505172
+  * Remove unneeded cpio dependency from dpkg-dev.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
