ostable: Reindent to make room for longer os names

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-06  Guillem Jover  <guillem@debian.org>
+
+	* ostable: Reindent to make room for longer os names.
+
 2009-02-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/update-alternatives.pl (rename_mv): Integrate logic to
