Add kopensolaris support to ostable and triplettable
Closes: #509312

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-06  Guillem Jover  <guillem@debian.org>
 
+	* ostable: Add gnu-kopensolaris.
+	* triplettable: Add gnu-kopensolaris to kopensolaris mapping.
+
+2009-02-06  Guillem Jover  <guillem@debian.org>
+
 	* ostable: Reindent to make room for longer os names.
 
 2009-02-05  Raphael Hertzog  <hertzog@debian.org>
