man: Document in detail the currently supported deb format
Ar member names, types of tar archives and data.tar members.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-06  Guillem Jover  <guillem@debian.org>
 
+	* man/deb.5: Add detailed information of the currently supported
+	format.
+
+2009-02-06  Guillem Jover  <guillem@debian.org>
+
 	* ostable: Add gnu-kopensolaris.
 	* triplettable: Add gnu-kopensolaris to kopensolaris mapping.
 
