--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Closes: #505172
   * Remove unneeded cpio dependency from dpkg-dev.
   * Add kopensolaris support to ostable and triplettable. Closes: #509312
+  * Document in deb.5 in detail the currently supported format, ar member
+    names, types of tar archives and data.tar members.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
