--- a/debian/changelog
+++ b/debian/changelog
@@ -129,6 +129,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     This also makes update-alternatives less noisy when this happens since we
     don't call mv when we know that it's going to fail.
     Closes: #98822
+  * Properly remove inappropriate slave links in update-alternatives even when
+    we switch to manual mode with --set or --config. Closes: #388313
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
