update-alternatives(8): update paragraph about --config
This documentation update has been forgotten in
commit c05d262a15742c82ee489031e71bd11220b137c4.

--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -121,14 +121,15 @@ option,
 will list all of the choices for the link group
 of which given
 .I name
-is the master link. The current choice is marked with a '*' and the
-choice with the highest priority with a '+'.
+is the master link. The current choice is marked with a '*'.
 You will then be prompted for your choice regarding this link group.
-Once you make a change, the link group will no longer be in
+Depending on the choice made, the link group might no longer be in
 .I auto
 mode. You will need to use the
 .I \-\-auto
-option in order to return to the automatic mode.
+option in order to return to the automatic mode (or you can rerun
+.I \-\-config
+and select the entry marked as automatic).
 .PP
 If you want to configure non-interactively you can use the
 .I \-\-set
