update-alternatives: remove the link group together with last alternative
* scripts/update-alternatives.pl: Remove the link group when
the last choice is removed, even if we are in manual mode.
* man/update-alternatives.8: Update the documentation
accordingly to not be as strong about not touching links in manual
mode.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,14 @@
 
 2009-02-06  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Remove the alternative when
+	the last choice is removed, even if we are in manual mode.
+	* man/update-alternatives.8: Update the documentation
+	accordingly to not be as strong about not touching links in manual
+	mode.
+
+2009-02-06  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl (set_links): Remove slavelinks
 	if needed as well. We create slave links automatically, we should
 	remove them in the same way. Otherwise --config or --set will let
