--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -95,8 +95,9 @@ in one of two modes: automatic or manual.
 When a group is in automatic mode, the alternatives system will
 automatically decide, as packages are installed and removed,
 whether and how to update the links.
-In manual mode, the alternatives system will not change the links;
-it will leave all the decisions to the system administrator.
+In manual mode, the alternatives system will retain the choice of
+the administrator and avoid changing the links (except when something is
+broken).
 .PP
 Link groups are in automatic mode when they are first introduced to
 the system.
