update-alternatives: switch non-existant alternative to auto
* scripts/update-alternatives.pl: Ensure that a non-existant
alternative result in automatic mode configuration.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,11 @@
 
 2009-02-06  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Ensure that a non-existant
+	alternative result in automatic mode configuration.
+
+2009-02-06  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Change set_links() to
 	also reset the main alternative link. Add a parameter to
 	make it quiet.
