Add non-regression test-suite for update-alternatives
* scripts/t/900_update_alternatives.t: New test-suite for
update-alternatives.
* scripts/Makefile.am: Add the previous file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,12 @@
 
 2009-02-06  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/t/900_update_alternatives.t: New test-suite for
+	update-alternatives.
+	* scripts/Makefile.am: Add the previous file.
+
+2009-02-06  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Deal with empty
 	files in the administrative directory by ignoring them.
 
