libdpkg: Remove unused function ohshitvb

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-08  Guillem Jover  <guillem@debian.org>
+
+	* lib/dpkg.h (ohshitvb): Remove function prototype.
+	* lib/ehandle.c (ohshitvb): Remove function definition.
+
 2009-02-06  Guillem Jover  <guillem@debian.org>
 
 	* man/deb.5: Add detailed information of the currently supported
