Updated Slovak translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-08  Ivan Masár  <helix84@centrum.sk>
+
+	* sk.po: Updated to 986t.
+
 2009-02-02  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
