--- a/debian/changelog
+++ b/debian/changelog
@@ -142,6 +142,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo).
   * Korean (Changwoo Ryu).
   * Romanian (Eddy Petrișor)
+  * Slovak (Ivan Masár)
 
  -- Guillem Jover <guillem@debian.org>  Tue, 29 Jul 2008 02:34:59 +0300
 
