--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,11 @@
 
 2009-02-06  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Deal with empty
+	files in the administrative directory by ignoring them.
+
+2009-02-06  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Ensure that a non-existant
 	alternative result in automatic mode configuration.
 
