--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2009-02-10  Guillem Jover  <guillem@debian.org>
 
+	* src/enquiry.c (assert_version_support): Remove reqversion argument.
+	Do not initialize verrev_buf from reqversion, when the epoch is ~0UL.
+	(assertpredep): Pass a fully constructed versionrevision to
+	assert_version_support, rename versionrevision variable to version
+	and remove static keyword.
+	(assertepoch): Likewise.
+	(assertlongfilenames): Likewise.
+	(assertmulticonrep): Likewise.
+
+2009-02-10  Guillem Jover  <guillem@debian.org>
+
 	* src/enquiry.c (assertversion): Rename to ...
 	(assert_version_support): ... this.
 
