dpkg: Print correct feature name on --assert-* failures

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-02-10  Guillem Jover  <guillem@debian.org>
 
+	* src/enquiry.c (assert_version_support): Add new feature_name
+	argument, and use it when printing the output messages. Fix all
+	callers.
+
+2009-02-10  Guillem Jover  <guillem@debian.org>
+
 	* src/enquiry.c (assert_version_support): Remove reqversion argument.
 	Do not initialize verrev_buf from reqversion, when the epoch is ~0UL.
 	(assertpredep): Pass a fully constructed versionrevision to
