dpkg: Rename assert_version_support argument verrev_buf to version

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-10  Guillem Jover  <guillem@debian.org>
 
+	* src/enquiry.c (assert_version_support): Rename verrev_buf argument
+	to version.
+
+2009-02-10  Guillem Jover  <guillem@debian.org>
+
 	* src/enquiry.c (assert_version_support): Add new feature_name
 	argument, and use it when printing the output messages. Fix all
 	callers.
