dpkg-buildpackage(1): Fix name of binary target in default case

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-11  Raphael Hertzog  <hertzog@debian.org>
+
+	* man/dpkg-buildpackage.1: Fix name of binary target in default
+	case.
+
 2009-02-10  Guillem Jover  <guillem@debian.org>
 
 	* src/enquiry.c (assert_version_support): Rename verrev_buf argument
