--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -27,7 +27,7 @@ a binary-only build has been requested with \fB\-b\fP, \fB\-B\fP or
 It calls \fBdebian/rules\fP \fBbuild\fP followed by
 \fBfakeroot debian/rules\fP \fIbinary-target\fP (unless a source-only
 build has been requested with \fB\-S\fP). Note that \fIbinary-target\fR is
-either \fBbuild\fP (default case, or if \fB\-b\fP is specified)
+either \fBbinary\fP (default case, or if \fB\-b\fP is specified)
 or \fBbinary-arch\fP (if \fB\-B\fP is specified) or \fBbinary-indep\fP
 (if \fB\-A\fP is specified).
 .IP \fB6.\fP 3
