dpkg-buildpackage: new option to call arbitrary debian/rules targets
* scripts/dpkg-buildpackage.pl: Add new option --target/-T to
allow a specific debian/rules target to be run. The new --as-root
option forces the target to be run with root rights.
Add support for the two common syntaxes for long
options ("--admindir=…" and "--admindir …").
* man/dpkg-buildpackage.1: Update documentation accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-02-11  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/dpkg-buildpackage.pl: Add new option --target/-T to
+	allow a specific debian/rules target to be run. The new --as-root
+	option forces the target to be run with root rights.
+	Add support for the two common syntaxes for long
+	options	("--admindir=…" and "--admindir …").
+	* man/dpkg-buildpackage.1: Update documentation accordingly.
+
+2009-02-11  Raphael Hertzog  <hertzog@debian.org>
+
 	* man/dpkg-buildpackage.1: Fix name of binary target in default
 	case.
 
