--- a/debian/changelog
+++ b/debian/changelog
@@ -138,6 +138,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     installed is the one currently selected. Closes: #100135
   * Let update-alternatives deal with empty files in its administrative
     directory by ignoring them. Closes: #457863
+  * Add new --target and --as-root options to dpkg-buildpackage to call
+    any debian/rules target with the proper build environment.
+    Closes: #477916
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
