--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -17,7 +17,9 @@ variables (see \fBENVIRONMENT VARIABLES\fP).
 It checks that the build-dependencies and build-conflicts
 are satisfied (unless \fB\-d\fP is specified).
 .IP \fB3.\fP 3
-It calls \fBfakeroot debian/rules clean\fP to clean the build-tree (unless
+If a specific target has been selected with the \fB-T\fP or \fB--target\fP
+option, it calls that target and stops here. Otherwise it calls
+\fBfakeroot debian/rules clean\fP to clean the build-tree (unless
 \fB\-nc\fP is specified).
 .IP \fB4.\fP 3
 It calls \fBdpkg-source\fP to generate the source package (unless
@@ -61,6 +63,23 @@ packages. Passed to \fBdpkg-genchanges\fP.
 .B \-S
 Specifies a source-only build, no binary packages need to be made.
 Passed to \fBdpkg-genchanges\fP.
+.P
+.BI \-\-target= target
+.br
+.BI "\-\-target " target
+.br
+.BI \-T target
+.RS
+Calls \fBdebian/rules\fP \fItarget\fP after having setup the build
+environment and stops the package build process here. If
+\fB\-\-as\-root\fP is also given, then the command is executed
+as root (see \fB\-r\fP). Note that official targets that are required to
+be run as root by the Debian policy do not need this option.
+.RE
+.TP
+.B \-\-as\-root
+Only meaningful together with \fB\-\-target\fP. Requires that the target be
+run with root rights.
 .P
 .B \-si
 .br
@@ -186,10 +205,14 @@ Do not sign the \fB.changes\fP file.
 .RS
 Passed unchanged to \fBdpkg\-source\fP. See its manual page.
 .RE
-.TP
+.P
 .BI \-\-admindir= dir
+.br
+.BI "\-\-admindir " dir
+.RS
 Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
+.RE
 .TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
