Wrap a changelog entry to please lintian

--- a/debian/changelog
+++ b/debian/changelog
@@ -132,8 +132,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Closes: #98822
   * Properly remove inappropriate slave links in update-alternatives even when
     we switch to manual mode with --set or --config. Closes: #388313
-  * Modify update-alternatives to always remove the alternative group when the last
-    alternative is removed (even in manual mode).
+  * Modify update-alternatives to always remove the alternative group when the
+    last alternative is removed (even in manual mode).
   * Ensure that update-alternative --install fix the links if the alternative
     installed is the one currently selected. Closes: #100135
   * Let update-alternatives deal with empty files in its administrative
