Move update-alternatives, dpkg-divert and dpkg-statoverride to /usr/bin
* scripts/Makefile.am: Move update-alternatives, dpkg-divert and
dpkg-statoverride to /usr/bin as they can be useful to users since
they have --display or --list options that do not require
administrative rights.
* Makefile.am (EXTRA_DIST): Add debian/dpkg.links

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-02-11  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Makefile.am: Move update-alternatives, dpkg-divert and
+	dpkg-statoverride to /usr/bin as they can be useful to users since
+	they have --display or --list options that do not require
+	administrative rights.
+	* Makefile.am (EXTRA_DIST): Add debian/dpkg.links.
+
+2009-02-11  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-buildpackage.pl: Add new option --target/-T to
 	allow a specific debian/rules target to be run. The new --as-root
 	option forces the target to be run with root rights.
