--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 ROADMAP
 =======
 
-lenny
-~~~~~
+squeeze
+~~~~~~~
 
  * Review this file and remove or update the old entries.
 
@@ -17,6 +17,12 @@ lenny
    Explain that backwards incompatible change involve a major version bump
    (1.x => 2.x) while minor version bump will be used for backwards
    compatible extension (e.g. new fields).
+
+squeeze + 1
+~~~~~~~~~~~
+
+ * Remove compatibility symlinks
+   /usr/sbin/{update-alternatives,dpkg-divert,dpkg-statoverride}.
 
 1.14.x
 ------
