Remove cleanup-info and its associated manual page
* scripts/Makefile.am: Drop cleanup-info.pl script.
* man/Makefile.am, man/po/po4a.cfg: Drop cleanup-info(8) manual page.
* README.feature-removal-schedule: Update information accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-02-11  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Makefile.am: Drop cleanup-info.pl script.
+	* man/Makefile.am, man/po/po4a.cfg: Drop cleanup-info(8) manual page.
+	* README.feature-removal-schedule: Update information accordingly.
+
+2009-02-11  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Makefile.am: Move update-alternatives, dpkg-divert and
 	dpkg-statoverride to /usr/bin as they can be useful to users since
 	they have --display or --list options that do not require
