--- a/debian/changelog
+++ b/debian/changelog
@@ -149,6 +149,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Use dh_lintian to install lintian overrides. Build-Depends on debhelper
     (>= 6.0.7) for this. Update debhelper compatility level to 6 at the same
     time.
+  * Drop cleanup-info script.
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
