Remove bogus comment about '--yet-to-unpack'

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-13  Guillem Jover  <guillem@debian.org>
+
+	* src/query.c: Remove bogus comment about '--yet-to-unpack'.
+
 2009-02-11  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Makefile.am: Drop cleanup-info.pl script.
