Fix typo in Swedish manual page translation.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-08-17 18:06+0400\n"
-"PO-Revision-Date: 2008-08-29 17:52+0100\n"
+"PO-Revision-Date: 2009-02-16 11:38+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1194,7 +1194,7 @@ msgid ""
 "may not contain any colons."
 msgstr ""
 "Ett ensamt (vanligtvis litet) heltalsvärde större än noll. Det kan "
-"uteslutas, i så fall antas det vara noll. Om det utesluts an inte "
+"uteslutas, i så fall antas det vara noll. Om det utesluts kan inte "
 "I<uppströmsversion> innehålla kolontecken."
 
 # type: Plain text
