--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ dpkg (1.14.26) UNRELEASED; urgency=low
 
   [ Updated manpages translations ]
   * Polish (Wiktor Wandachowicz). Closes: #514106
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 03 Feb 2009 00:27:59 +0200
 
