update-alternatives: complete rewrite
Full rewrite of update-alternatives. It was badly needed so that
we can actually understand its behaviour and implement new features
on top of it. This commit doesn't add any new feature but still improves
the behaviour of --config: it has a nicer output (with choices sorted
alphabetically, closes: #437060) and it accepts a path as well as the
index of the choice (to make it easier to write non regression tests for
this action). The test-suite is adjusted accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Rewrite it entirely in a more
+	object-oriented way. The only behaviour changes concern --config:
+	the output is nicer and sorted, it accets a path as well as the
+	index of the choice.
+	* scripts/t/900_update_alternatives.t: Test suite adjusted to the
+	--config change.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/dpkg-gencontrol.pl, scripts/dpkg-gensymbols.pl: Reset
 	umask to 0022 to ensure that files created in the DEBIAN directory
 	have sane permissions.
