--- a/debian/changelog
+++ b/debian/changelog
@@ -153,6 +153,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Reset umask to 0022 in dpkg-gencontrol and dpkg-gensymbols to ensure that
     files created in the DEBIAN directory have sane permissions.
     Closes: #516481
+  * Rewrite update-alternatives (so that we can understand it again) and
+    implement new features on top of it:
+    - the --config output is now sorted. Closes: #437060
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
