update-alternatives(8): adjust vocabulary used
The vocabulary used was misleading and not really uniform. Try to
standardize and make it match with the vocabulary used in the source
code too.

Includes minor fixes to make it match the behaviour of the current
implementation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* man/update-alternatives.8: The vocabulary used was misleading
+	and not really uniform. Try to standardize and make it match with
+	the vocabulary used in the source code too.
+	Includes minor fixes to make it match the behaviour of the current
+	implementation.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Rewrite it entirely in a more
 	object-oriented way. The only behaviour changes concern --config:
 	the output is nicer and sorted, it accets a path as well as the
