scripts/de.po: Fix a typo

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -1854,7 +1854,7 @@ msgid ""
 "Couldn't determine gcc system type, falling back to default (native "
 "compilation)"
 msgstr ""
-"Lpmmte gcc-Systemtyp nicht ermitteln, falle auf Standardwerte (native "
+"Konnte gcc-Systemtyp nicht ermitteln, falle auf Standardwerte (native "
 "Übersetzung) zurück"
 
 #: scripts/Dpkg/Arch.pm:78
