--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-21  Frank Lichtenheld  <djpig@debian.org>
+
+	* de.po: Fix typo.
+
 2009-02-05  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 472t
