update-alternatives: add logging to /var/log/dpkg.log
Add logging statements in update-alternatives for all calls that can
modify the status of the link group. Also log explicitely alternative
removal, auto-reparation and update. Closes: #445270

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Add logging to
+	/var/log/dpkg.log.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* man/update-alternatives.8: The vocabulary used was misleading
 	and not really uniform. Try to standardize and make it match with
 	the vocabulary used in the source code too.
