update-alternatives: stricter validation of --install parameters
Fail if --install tries to reuse links owned by other alternatives, or
if the alternative type (slave/master) doesn't match the information
already available. Closes: #342566
Modify test-suite to verify this behaviour.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Checks that --install does not
+	reuse alternatives or links in a way that is not compatible with
+	the current setup.
+	* scripts/t/900_update_alternatives.t: Add corresponding tests in
+	the test suite.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Add logging to
 	/var/log/dpkg.log.
 
