--- a/debian/changelog
+++ b/debian/changelog
@@ -157,6 +157,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     implement new features on top of it:
     - the --config output is now sorted. Closes: #437060
     - it now logs information to /var/log/dpkg.log. Closes: #445270
+    - it forbids reusing master alternative as slave and vice-versa.
+      Closes: #342566
+    - it forbids reusing alternative links managed by other alternatives
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
