update-alternatives: add more checks on --install parameters
Check that links and alternative paths are absolute. Check that the
master alternative path exists. Forbid "/" and spaces in alternative names.
Closes: #423176
Add corresponding tests in the test-suite.

--- a/debian/changelog
+++ b/debian/changelog
@@ -160,6 +160,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     - it forbids reusing master alternative as slave and vice-versa.
       Closes: #342566
     - it forbids reusing alternative links managed by other alternatives
+    - new sanity checks on --install parameters. Closes: #423176
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
