--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Add more sanity check for
+	--install: ensure alternative path and links are absolute, ensure
+	master alternative path exists, forbid / and spaces in alternative
+	names.
+	* scripts/t/900_update_alternatives.t: Add corresponding tests in
+	the test suite.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Checks that --install does not
 	reuse alternatives or links in a way that is not compatible with
 	the current setup.
