update-alternatives: skip slave link if associated file doesn't exist
All slave links are optional in the sense that they are only installed
if the currently associated file does exist. This allows most
update-alternatives call to succeed even if the admin removed
documentation files or other optional files. Closes: #143701
A message is still displayed by default in this case to warn the
user that something uncommon has been detected.

Adjusted the test suite to verify this behaviour.

--- a/debian/changelog
+++ b/debian/changelog
@@ -161,6 +161,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
       Closes: #342566
     - it forbids reusing alternative links managed by other alternatives
     - new sanity checks on --install parameters. Closes: #423176
+    - install slave link only if the corresponding slave file is available.
+      Closes: #143701
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
