Copy typo fix from trunk

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.14.26) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Polish (Wiktor Wandachowicz). Closes: #514106
+  * German (Helge Kreutzmann).
 
   [ Updated manpages translations ]
   * Polish (Wiktor Wandachowicz). Closes: #514106
