--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22  Helge Kreutzmann <debian@helgefjell.de>
+
+	* de.po: Copy typo fix from trunk
+
 2009-02-05  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 472t
