update-alternatives: add new option --get-selections
The new option list all master alternatives and their status
in a format simple to parse. It's also a practical way to know
the name of all available alternatives. Closes: #273406, #392429

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Implement --get-selections.
+	The new option lists all master alternatives and their status in a
+	format simple to parse.
+	* man/update-alternatives.8: Document this option.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Installation of a slave
 	alternative link is only done if the corresponding slave file is
 	available.
