--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -287,6 +287,14 @@ what other alternatives are available
 (and their corresponding slave alternatives),
 and the highest priority alternative currently installed.
 .TP
+\fB\-\-get\-selections\fR
+List all master alternative names (those controlling a link group)
+and their status. Each line contains up to 3 fields (separated by
+one or more spaces). The first field is the alternative name, the second
+one is the status (either "auto" or "manual"), and the last one contains
+the current choice in the alternative (beware: it's a filename and thus
+might contain spaces).
+.TP
 \fB\-\-query\fR \fIname\fR
 Display information about the link group
 like \-\-display does, but in a machine parseable way
