update-alternatives: new option --set-selections
The option --set-selections is the counterpart of --get-selections,
it reads configuration on standard input and reconfigures alternatives
accordingly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Implement --set-selections.
+	It's the the counterpart of --get-selections, it reads
+	configuration on standard input and reconfigures alternatives
+	accordingly.
+	* man/update-alternatives.8: Document this option.
+	* scripts/t/900_update_alternatives.t: Add corresponding tests in
+	the test suite.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Implement --get-selections.
 	The new option lists all master alternatives and their status in a
 	format simple to parse.
