--- a/debian/changelog
+++ b/debian/changelog
@@ -166,6 +166,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     - new option --get-selections to export the configuration of all
       alternatives. It's a simple way to discover the name of all available
       alternatives. Closes: #273406, #392429
+    - new option --set-selections to reconfigure a set of alternatives in
+      a single command.
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
