update-alternatives: --all can be used to restore broken alternatives
Since alternatives are repaired every time they are reconfigured,
the user can use --all to reconfigure them all with the current choice
and repair everything. Document this in the manual pages and ensure
that it really works that way by returning a valid choice.
Closes: #250258, #395556

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* man/update-alternatives.8: Document how --all can be used to
+	repair all alternatives on the system in a single command.
+	* scripts/update-alternatives.pl: Ensure the above explanation
+	is true by ensuring that --config does something sensible when
+	no alternative is currently selected and when the user input is
+	empty: it will auto-select the best alternative.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Implement --set-selections.
 	It's the the counterpart of --get-selections, it reads
 	configuration on standard input and reconfigures alternatives
