--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -270,6 +270,8 @@ is a name in the alternatives directory.
 Call \fB\-\-config\fP on all alternatives. It can be usefully combined with
 \fB\-\-skip\-auto\fP to review and configure all alternatives which are
 not configured in automatic mode. Broken alternatives are also displayed.
+Thus a simple way to fix all broken alternatives is to call
+\fByes \[aq]\[aq] | update-alternatives \-\-force \-\-all\fR.
 .TP
 \fB\-\-auto\fR \fIname\fR
 Switch the link group behind the alternative name
